@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-18T16:36:25Z",
+  "timestamp" : "2022-10-19T02:08:12Z",
   "count_outdated" : 2501,
   "uniques_outdated" : 643,
-  "count" : 2564,
+  "count" : 2565,
   "uniques" : 681,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-10-18T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
