@@ -1,5 +1,5 @@
 {
-  "count": 63,
+  "count": 64,
   "uniques": 25,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-10-18T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
