@@ -1,3 +1,11 @@
+2022-10-19T02:08:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3278291524 # 948
+* notice: last 14d: unq all: 25 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 643 2501 / 681 2564
+* notice: next accum: outdated-unq outdated-all / unq all: 643 2501 / 681 2565
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-10-18]
+
 2022-10-18T16:36:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3275270240 # 947
 * notice: last 14d: unq all: 25 63
